# tracy

./: .gitignore  .gitmodules  LICENSE  README  README.md  TODO  cabal.config  cabal.project  cabal.project.freeze  ghc-7.10.cabal.config  ghc-7.8.cabal.config  mac-setup.sh  test.yaml  tracy.cabal
blender/: table.blend  table_lamp.blend
cbits/: average.c
meshes/: chairLeft.ply  cube.ply  earth.ply  ico1.ply  monkey.ply  plane_front.ply  plane_left.ply  plane_top.ply  torus.ply
meshes/table/: bunny.ply  chairRight.ply  monkey.ply  monkey2.ply  plane_back.ply  plane_bottom.ply  plane_right.ply  table.ply
meshes/table-lamp/: bulb.ply  bulb_shaft.ply  ceiling.ply  chair1.ply  chair2.ply  floor.ply  lamp_shade.ply  table.ply  wall1.ply  wall2.ply  wall3.ply  wall4.ply
programs/: BenchMain.hs  BrickMain.hs  Loader.hs  Main.hs  NodeMain.hs  SamplerDebug.hs
scenes/: .gitignore  bunny.yaml  cube.yaml  dragon.yaml  earth.yaml  environ.yaml  instanced-spheres.yaml  mix.yaml  monkey.yaml  object-demo.yaml  one-sphere.yaml  refl.yaml  table-lamp.yaml  table.yaml  textures.yaml
scripts/: bench.sh  build_movie.sh
src/: Main.hs  SamplerDebug.hs
src/Tracy/: AccelSchemes.hs  Anim.hs  BRDF.hs  BoundingBox.hs  Box.hs  Cameras.hs  ChunkRender.hs  Compound.hs  ConsoleHandler.hs  Constants.hs  FileHandler.hs  GUIHandler.hs  Grid.hs  Lights.hs  LocalRender.hs  Main.hs  Materials.hs  NetworkRender.hs  Plane.hs  Samplers.hs  SceneBuilder.hs  SceneLoader.hs  Scenes.hs  Sphere.hs  Tracers.hs  Transformations.hs  Triangle.hs  Types.hs  Util.hs  World.hs
src/Tracy/BRDF/: GlossySpecular.hs  Lambertian.hs  PerfectSpecular.hs
src/Tracy/Cameras/: ThinLens.hs
src/Tracy/DataHandlers/: FileHandler.hs  GLFWHandler.hs  GUIHandler.hs
src/Tracy/InfoHandlers/: ConsoleHandler.hs
src/Tracy/Lights/: Ambient.hs  AmbientOccluder.hs  Area.hs  Environment.hs  Point.hs
src/Tracy/Materials/: Add.hs  Emissive.hs  Matte.hs  Mix.hs  Phong.hs
src/Tracy/Objects/: BVH.hs  Box.hs  Compound.hs  Grid.hs  Instance.hs  Mesh.hs  Plane.hs  Rectangle.hs  Sphere.hs  Torus.hs  Triangle.hs
src/Tracy/RenderManagers/: Local.hs  Network.hs
src/Tracy/TextureMapping/: Spherical.hs  Tile.hs
src/Tracy/Textures/: ConstantColor.hs  ImageTexture.hs  PlaneChecker.hs  SphereChecker.hs  TransformedTexture.hs
