name:                tracy
version:             0.1.0.0
synopsis:            Ray tracer
license:             BSD3
license-file:        LICENSE
author:              Jonathan Daugherty <cygnus@foobox.com>
maintainer:          Jonathan Daugherty <cygnus@foobox.com>
copyright:           Jonathan Daugherty (c) 2013-2015
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

Flag bench
    Description:     Build with benchmarking support
    Default:         False

library
  Hs-Source-Dirs:      src
  GHC-Options:         -O2 -Wall -funbox-strict-fields
  build-depends:
    AC-Colour >= 1.1.6,
    GLFW-b,
    OpenGL,
    aeson,
    aeson-pretty,
    array,
    base == 4.*,
    bmp >= 1.2.4.1,
    bytestring,
    cereal,
    containers,
    deepseq,
    diagrams-solve,
    distributive,
    either,
    ffmpeg-light >= 0.11,
    JuicyPixels,
    lens,
    linear >= 1.17,
    mtl,
    mwc-random,
    old-locale,
    parallel,
    ply-loader >= 0.4.2,
    scientific,
    silently,
    stm,
    text,
    time,
    vector,
    cereal-vector,
    yaml,
    zeromq4-haskell

  C-Sources:
    cbits/average.c

  exposed-modules:
    Tracy.Anim
    Tracy.BRDF.GlossySpecular
    Tracy.BRDF.Lambertian
    Tracy.BRDF.PerfectSpecular
    Tracy.BoundingBox
    Tracy.Cameras.ThinLens
    Tracy.ChunkRender
    Tracy.Constants
    Tracy.Main
    Tracy.Samplers
    Tracy.SceneBuilder
    Tracy.SceneLoader
    Tracy.Tracers
    Tracy.Transformations
    Tracy.Types
    Tracy.Util
    Tracy.DataHandlers.FileHandler
    Tracy.DataHandlers.GLFWHandler
    Tracy.InfoHandlers.ConsoleHandler
    Tracy.Lights.Ambient
    Tracy.Lights.AmbientOccluder
    Tracy.Lights.Area
    Tracy.Lights.Environment
    Tracy.Lights.Point
    Tracy.Materials.Add
    Tracy.Materials.Emissive
    Tracy.Materials.Matte
    Tracy.Materials.Mix
    Tracy.Materials.Phong
    Tracy.Objects.Box
    Tracy.Objects.BVH
    Tracy.Objects.Compound
    Tracy.Objects.Grid
    Tracy.Objects.Instance
    Tracy.Objects.Mesh
    Tracy.Objects.Plane
    Tracy.Objects.Rectangle
    Tracy.Objects.Sphere
    Tracy.Objects.Torus
    Tracy.Objects.Triangle
    Tracy.RenderManagers.Local
    Tracy.RenderManagers.Network
    Tracy.Textures.ConstantColor
    Tracy.Textures.PlaneChecker
    Tracy.Textures.SphereChecker
    Tracy.Textures.TransformedTexture
    Tracy.Textures.ImageTexture
    Tracy.TextureMapping.Spherical
    Tracy.TextureMapping.Tile

executable tracy-loader
  Hs-Source-Dirs:      programs
  Main-is:             Loader.hs
  GHC-Options:         -O2 -Wall -threaded
  build-depends:
    base == 4.*,
    tracy

executable tracy-bench
  Hs-Source-Dirs:      programs,src
  Main-is:             BenchMain.hs
  GHC-Options:         -O2 -Wall -threaded

  if flag(bench)
    Buildable:     True
  else
    Buildable:     False

  CPP-Options: -DBENCH

  build-depends:
    criterion,
    AC-Colour >= 1.1.6,
    OpenGL,
    aeson,
    aeson-pretty,
    array,
    base == 4.*,
    bmp >= 1.2.4.1,
    bytestring,
    cereal,
    containers,
    deepseq,
    diagrams-solve,
    distributive,
    either,
    JuicyPixels,
    lens,
    linear >= 1.17,
    mtl,
    mwc-random,
    old-locale,
    parallel,
    ply-loader >= 0.4.2,
    scientific,
    stm,
    text,
    time,
    vector,
    cereal-vector,
    yaml,
    zeromq4-haskell

  C-Sources:
    cbits/average.c

executable tracy
  Hs-Source-Dirs:      programs
  Main-is:             Main.hs
  GHC-Options:         -O2 -Wall -threaded
  build-depends:
    base == 4.*,
    lens,
    tracy,
    brick >= 2.9,
    containers,
    time,
    vty,
    vty-unix,
    data-default

executable tracy-node
  Hs-Source-Dirs:      programs
  Main-is:             NodeMain.hs
  GHC-Options:         -O2 -Wall -threaded
  build-depends:
    base == 4.*,
    cereal,
    lens,
    tracy,
    zeromq4-haskell

executable tracy-debug-samplers
  Hs-Source-Dirs:      programs
  Main-is:             SamplerDebug.hs
  GHC-Options:         -Wall -threaded
  build-depends:
    AC-Colour,
    base == 4.*,
    bmp >= 1.2.4.1,
    bytestring,
    containers,
    lens,
    mtl,
    mwc-random,
    tracy,
    vector
